--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ input[type=text], input[type=number], input[type=date] {
 }
 
 input[type=submit]{
-    width: 30%;
+     width: 30%;
     background-color: #F2A341;
     color: #000;
     padding: 14px 20px;
@@ -70,6 +70,8 @@ input[type=submit]{
     font-size: 18px;
     font-weight: 600;
     border: none;
+    margin-top: 30px;
+    margin-right: 200px;
 }
 input[type=submit]:hover{
     background-color: #BF4904;
